--- a/app/src/main/res/layout/tab_fragment_1.xml
+++ b/app/src/main/res/layout/tab_fragment_1.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        app:srcCompat="@drawable/burger_no_cheese" />
 
     <Button
         android:id="@+id/btnAddress"
@@ -17,12 +30,30 @@
 
     <ListView
         android:id="@+id/listview_1"
-        android:layout_width="260dp"
-        android:layout_height="360dp"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="271dp"
+        android:layout_height="320dp"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="125dp"
+        android:layout_marginBottom="66dp"
         android:choiceMode="singleChoice"
-        android:dividerHeight="3dp"
-        android:layout_marginLeft="28dp" />
+        android:dividerHeight="3dp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="329dp"
+        android:layout_height="85dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="102dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginRight="27dp"
+        app:srcCompat="@drawable/cheese" />
+
 </RelativeLayout>
