add CALL_Phone function

--- a/app/src/main/res/layout/activity_bad.xml
+++ b/app/src/main/res/layout/activity_bad.xml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/cardview_light_background">
 
-    <TextView
-        android:id="@+id/goodText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="170dp"
-        android:layout_marginLeft="170dp"
-        android:layout_marginTop="188dp"
-        android:text="사야됨" />
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/anim"
+        android:layout_width="match_parent"
+        android:layout_height="286dp"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="em_tongue.json"
+        app:lottie_loop="true" />
 
-    <Button
+    <ImageButton
         android:id="@+id/badNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="144dp"
-        android:text="다음사람" />
+        android:layout_marginBottom="31dp"
+        android:background="@android:color/background_light"
+        app:srcCompat="@drawable/left_arrow" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/badNext"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-7dp"
+        android:text="그대의 잔고는 안녕!"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 </RelativeLayout>
