--- a/app/src/main/res/layout/activity_bad.xml
+++ b/app/src/main/res/layout/activity_bad.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/cardview_light_background">
 
+
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/anim"
         android:layout_width="match_parent"
@@ -20,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="31dp"
+        android:layout_marginBottom="30dp"
         android:background="@android:color/background_light"
         app:srcCompat="@drawable/left_arrow" />
 
@@ -32,5 +33,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-7dp"
         android:text="그대의 잔고는 안녕!"
+        android:textColor="#000000"
+        android:textSize="30dp"
+        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 </RelativeLayout>
