--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,15 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/gamingLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/cardview_light_background">
 
     <ImageButton
         android:id="@+id/pressButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/badNum"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="153dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="66dp"
+        android:layout_marginTop="293dp"
+        android:background="@color/cardview_light_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/button"
@@ -23,10 +27,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="87dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="230dp"
         android:text="눌러눌러!"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#7F7F7F"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/badNum"
@@ -35,68 +41,70 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="116dp"
-        android:layout_marginLeft="116dp"
-        android:layout_marginBottom="156dp"
-        android:text="밥 사주는 사람 총:"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
-
-    <TextView
-        android:id="@+id/badOutput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/badNum"
-        android:layout_alignEnd="@+id/pressButton"
-        android:layout_alignRight="@+id/pressButton"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginRight="21dp"
-        android:text="00" />
+        android:layout_marginStart="65dp"
+        android:layout_marginLeft="65dp"
+        android:layout_marginBottom="431dp"
+        android:text="밥 잘 사주는 \n 예쁜 누나들과 잘생긴 오빠들"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textColor="#000000"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/resultUnit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/badNum"
+        android:layout_alignLeft="@+id/badNum"
         android:layout_alignTop="@+id/badNum"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="112dp"
-        android:layout_marginRight="112dp"
+        android:layout_marginStart="245dp"
+        android:layout_marginLeft="245dp"
+        android:layout_marginTop="17dp"
         android:text="명" />
 
     <TextView
-        android:id="@+id/sample1"
+        android:id="@+id/resultUnit2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="75dp"
-        android:layout_toStartOf="@+id/pressButton"
-        android:layout_toLeftOf="@+id/pressButton"
-        android:text="총인원" />
+        android:layout_alignStart="@+id/badNum"
+        android:layout_alignLeft="@+id/badNum"
+        android:layout_alignTop="@+id/badNum"
+        android:layout_marginStart="223dp"
+        android:layout_marginLeft="223dp"
+        android:layout_marginTop="44dp"
+        android:text="명" />
 
     <TextView
         android:id="@+id/sample2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/badNum"
+        android:layout_alignLeft="@+id/badNum"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginRight="55dp"
-        android:text="꽝 수" />
+        android:layout_marginStart="194dp"
+        android:layout_marginLeft="194dp"
+        android:layout_marginTop="62dp"
+        android:text="총 꽝 수" />
 
     <TextView
         android:id="@+id/gameNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/pressButton"
-        android:layout_alignRight="@+id/pressButton"
+        android:layout_alignEnd="@+id/sample2"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="-25dp"
-        android:layout_marginRight="25dp"
-        android:text="나온 수" />
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="21dp"
+        android:text="꽝이 나온 수" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="139dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/badNum"
+        android:layout_alignTop="@+id/gameNum"
+        android:layout_marginStart="-1dp"
+        android:layout_marginTop="0dp"
+        android:text="지금까지 꽝이 나온 수"
+        android:textColor="#000000"
+        android:textStyle="bold" />
 
 </RelativeLayout>
