--- a/app/src/main/res/layout/tab_fragment_1.xml
+++ b/app/src/main/res/layout/tab_fragment_1.xml
@@ -19,14 +19,21 @@
 
     <Button
         android:id="@+id/btnAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="311dp"
+        android:layout_height="185dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="10dp"
-        android:text="밥 먹을 친구들 불러보자!"
-        android:layout_marginLeft="140dp" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="196dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginRight="22dp"
+        android:background="@drawable/note"
+        android:text="밥 먹을 친구들
+        불러보자!"
+        android:textColor="#000000"
+        android:textSize="18dp"
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/listview_1"
