--- a/app/src/main/res/layout/activity_good.xml
+++ b/app/src/main/res/layout/activity_good.xml
@@ -21,5 +21,18 @@
         android:layout_marginBottom="43dp"
         app:srcCompat="@drawable/left_arrow" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/goodNext"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-8dp"
+        android:text="오늘은 공짜밥!"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#000000"
+        android:textSize="30dp"
+        android:textStyle="bold" />
+
 
 </RelativeLayout>
